--- a/main/templates/User-page.html
+++ b/main/templates/User-page.html
@@ -38,7 +38,7 @@
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="{% static 'frontend/img/man-smile-icon-png_269182.jpg' %}" alt="" width="30" height="24"
                             class="d-inline-block align-text-top" id="img">
-                        897454
+                        นวพล สินมา
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#progress">ความคืบหน้า</a>
