--- a/main/templates/quiz.html
+++ b/main/templates/quiz.html
@@ -42,6 +42,6 @@
     </div>
 
 </body>
-<script src="{% static 'frontend/js/quiz.js' %}"></script>
+<script src="{% static 'frontend/js/quiz1.js' %}"></script>
 
 </html>
