--- a/main/templates/User-page.html
+++ b/main/templates/User-page.html
@@ -109,7 +109,7 @@
                         <div class="card">
                             <div class="card-body p-2">
                                 <video id="videoP" class=" video-js vjs-fluid" controls data-setup='{}'>
-                                    <source src="video/1.1 แนะนำเว็บแอปพลิเคชัน อพม.Smart.mp4" type="video/mp4">
+                                    <source src="../static/frontend/video/1.1 แนะนำเว็บแอปพลิเคชัน อพม.Smart.mp4" type="video/mp4">
                                 </video>
                                 <p id="percentage" class="hide_percent">0</p>
                                
@@ -160,7 +160,7 @@
                                         aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushHead">
                                         <div class="accordion-body">
 
-                                            <a href="#" class="nav-link text-dark ms-3" id="videoLink1"
+                                            <a href="#" class="nav-link  ms-3" id="videoLink1"
                                                 onclick="light(1)">1.1 แนะนำเว็บแอปพลิเคชัน อพม.Smart</a>
 
                                         </div>
@@ -181,7 +181,7 @@
                                         aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushHead">
                                         <div class="accordion-body">
 
-                                            <a href="#" class="nav-link text-dark ms-3" id="videoLink2"
+                                            <a href="#" class="nav-link  ms-3" id="videoLink2"
                                                 onclick="light(2)">2.1
                                                 การเข้าสู่ระบบ</a>
 
@@ -204,37 +204,37 @@
                                         <div class="accordion-body col">
 
 
-                                            <a href="#" class="nav-link text-dark ms-3  pb-4 pt-2" id="videoLink3"
+                                            <a href="#" class="nav-link  ms-3  pb-4 pt-2" id="videoLink3"
                                                 onclick="light(3)">3.1 การยื่นคำร้องและการกดรับพิกัด GPS</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3  pb-4" id="videoLink4"
+                                            <a href="#" class="nav-link  ms-3  pb-4" id="videoLink4"
                                                 onclick="light(4)">3.2 การกรอกประวัติผู้ประสบปัญหาทางสังคม</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3  pb-4" id="videoLink5"
+                                            <a href="#" class="nav-link  ms-3  pb-4" id="videoLink5"
                                                 onclick="light(5)">3.3 การกรอกที่อยู่ตามทะเบียนบ้าน</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3  pb-4" id="videoLink6"
+                                            <a href="#" class="nav-link  ms-3  pb-4" id="videoLink6"
                                                 onclick="light(6)">3.4 การกรอกที่อยู่ปัจจุบัน</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3  pb-4" id="videoLink7"
+                                            <a href="#" class="nav-link  ms-3  pb-4" id="videoLink7"
                                                 onclick="light(7)">3.5 การเลือกประเภทผู้ขอรับบริการ</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3  pb-4" id="videoLink8"
+                                            <a href="#" class="nav-link  ms-3  pb-4" id="videoLink8"
                                                 onclick="light(8)">3.6 การเลือกสภาพปัญหาความเดือดร้อนที่พบ</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3  pb-4" id="videoLink9"
+                                            <a href="#" class="nav-link  ms-3  pb-4" id="videoLink9"
                                                 onclick="light(9)">3.7 การเลือกเรื่องที่ขอรับความช่วยเหลือที่ต้องการ</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3  pb-4" id="videoLink10"
+                                            <a href="#" class="nav-link  ms-3  pb-4" id="videoLink10"
                                                 onclick="light(10)">3.8 สิทธิสวัสดิการที่เคยได้รับ</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3  pb-4" id="videoLink11"
+                                            <a href="#" class="nav-link  ms-3  pb-4" id="videoLink11"
                                                 onclick="light(11)">3.9 การรับรองข้อมูลส่วนบุคคล</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3 pb-4" id="videoLink12"
+                                            <a href="#" class="nav-link  ms-3 pb-4" id="videoLink12"
                                                 onclick="light(12)">3.10 การเยี่ยมบ้านและการแนบเอกสารเพิ่มเติม</a>
 
-                                            <a href="#" class="nav-link text-dark ms-3 pb-2" id="videoLink13"
+                                            <a href="#" class="nav-link  ms-3 pb-2" id="videoLink13"
                                                 onclick="light(13)">3.11 การยืนยันการบันทึกข้อมูล</a>
 
 
@@ -257,10 +257,10 @@
                                         aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushHead">
                                         <div class="accordion-body">
                                             <nav class="nav flex-column">
-                                                <a class="nav-link text-dark" href="#" onclick="light(14)"id="videoLink14">4.1
+                                                <a class="nav-link " href="#" onclick="light(14)"id="videoLink14">4.1
                                                     การตรวจสอบและบันทึกข้อมูลสำหรับ
                                                     อพม.ระดับตำบล</a>
-                                                <a class="nav-link text-dark" href="#" onclick="light(15)"id="videoLink15">4.2
+                                                <a class="nav-link " href="#" onclick="light(15)"id="videoLink15">4.2
                                                     การตรวจสอบและบันทึกข้อมูลสำหรับ อพม.ระดับอำเภอ</a>
                                             </nav>
                                         </div>
@@ -281,7 +281,7 @@
                                         aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushHead">
                                         <div class="accordion-body">
                                             <nav class="nav flex-column">
-                                                <a class="nav-link text-dark" href="#" onclick="light(16)"id="videoLink16">5.1
+                                                <a class="nav-link " href="#" onclick="light(16)"id="videoLink16">5.1
                                                     ความหมายของสถานะ</a>
                                             </nav>
                                         </div>
@@ -302,7 +302,7 @@
                                         aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushHead">
                                         <div class="accordion-body">
                                             <nav class="nav flex-column">
-                                                <a class="nav-link text-dark" href="#" onclick="light(17)"id="videoLink17">6.1
+                                                <a class="nav-link " href="#" onclick="light(17)"id="videoLink17">6.1
                                                     การสร้างทางลัด อพม.Smart
                                                     ไว้บนหน้าจอหลัก</a>
                                             </nav>
@@ -335,6 +335,6 @@
 <script src="{% static 'frontend/js/bootstrap.bundle.js' %}"></script>
 <script src="{% static 'frontend/js/bootstrap.esm.js' %}"></script>
 <script src="{% static 'frontend/js/bootstrap.js' %}"></script>
-<script src="{% static 'frontend/js/video.js' %}"></script>
+<script src="{% static 'frontend/js/video2.js' %}"></script>
 
 </html>
